; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_ov534_9.c_sccb_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/gspca/extr_ov534_9.c_sccb_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gspca_dev = type { i32 }

@D_USBO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"sccb_write [%02x] = %02x\0A\00", align 1
@OV534_REG_SUBADDR = common dso_local global i32 0, align 4
@OV534_REG_WRITE = common dso_local global i32 0, align 4
@OV534_REG_OPERATION = common dso_local global i32 0, align 4
@OV534_OP_WRITE_3 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"sccb_write failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gspca_dev*, i32, i32)* @sccb_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sccb_write(%struct.gspca_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gspca_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.gspca_dev* %0, %struct.gspca_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %8 = load i32, i32* @D_USBO, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @gspca_dbg(%struct.gspca_dev* %7, i32 %8, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %10)
  %12 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %13 = load i32, i32* @OV534_REG_SUBADDR, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @reg_w_i(%struct.gspca_dev* %12, i32 %13, i32 %14)
  %16 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %17 = load i32, i32* @OV534_REG_WRITE, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @reg_w_i(%struct.gspca_dev* %16, i32 %17, i32 %18)
  %20 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %21 = load i32, i32* @OV534_REG_OPERATION, align 4
  %22 = load i32, i32* @OV534_OP_WRITE_3, align 4
  %23 = call i32 @reg_w_i(%struct.gspca_dev* %20, i32 %21, i32 %22)
  %24 = load %struct.gspca_dev*, %struct.gspca_dev** %4, align 8
  %25 = call i32 @sccb_check_status(%struct.gspca_dev* %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %29, label %27

27:                                               ; preds = %3
  %28 = call i32 @pr_err(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  br label %29

29:                                               ; preds = %27, %3
  ret void
}

declare dso_local i32 @gspca_dbg(%struct.gspca_dev*, i32, i8*, i32, i32) #1

declare dso_local i32 @reg_w_i(%struct.gspca_dev*, i32, i32) #1

declare dso_local i32 @sccb_check_status(%struct.gspca_dev*) #1

declare dso_local i32 @pr_err(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
